--- a/ospf.qmd
+++ b/ospf.qmd
@@ -18,13 +18,6 @@ code-block-bg: dark
     -   Retransmit - 5 (how long to wait to retransmit OSPF packet which hasn't been acknowledged)
 -   224.0.0.5 - Broadcast for All OSPF Routers (Broadcast), **Port 89**
 -   224.0.0.6 - Broadcast for All Designates Routers, **Port 89**
--   Neighbourship Requirements
-    -   Matching Area
-    -   Matching Auth Parameters
-    -   Matching Subnet
-    -   Matching Timers
-    -   Matching Stub Flags
-    -   Matching MTU (Exstart/Exchange State)
 -   **DR/BDR Election** - Highest Priority value (0 to remove from election) - Highest Router-ID - Highest IP on Loopback Int - Highest IP on interface that's UP
 -   **Metric Calculation**
     -   Bandwidth \\ References Bandwidth - Default ref is 100Mb (all interfaces \> 100M have same ref cost.
@@ -57,6 +50,17 @@ code-block-bg: dark
 ------------------------------------------------------------------------
 
 # Features
+
+## Neighbourship
+
+-   Neighbourship Requirements (Must match)
+    -   Matching Area
+    -   Matching Auth Parameters
+    -   Matching Subnet
+    -   Matching Timers
+    -   Matching Stub Flags
+    -   Matching MTU (Exstart/Exchange State)
+-   Troubleshooting - **TAN MAT** (**T**imers, **A**rea, **N**etwork Address, **M**TU, **A**uth, **T**ype)
 
 ## Authentication
 
@@ -136,15 +140,12 @@ ip ospf authentication key-chain OSPF_KEY
     -   NSSA prevents LSA5 advertisements but allows redistribution of externals
 
         -   Configured with `area <area#> nssa` under router ospf
-
         -   Does not advertise default route from ABR by default
-
         -   Can use `area <area#> nssa default-information-originate` to advertise default
 
     -   Totally NSSA prevents LSA3, 5 but allows redistribution of externals
 
         -   Configured with `area <area#> nssa no-summary` under router ospf
-
         -   Advertises default route from ABR
 -   Externals originated in these areas will be LSA7s instead of LSA5s, translated to LSA5 at ABR
 
