--- a/tools.qmd
+++ b/tools.qmd
@@ -3,4 +3,4 @@ title: "Tools"
 editor: visual
 ---
 
-HE BGP Toolkit  - <https://bgp.he.net/>
+HE BGP Toolkit - [https://bgp.he.net/](https://bgp.he.net/){target="_blank"}
