--- a/bgp.qmd
+++ b/bgp.qmd
@@ -38,7 +38,9 @@ code-block-bg: dark
 -   It's recommended to update source to a loopback for resiliency `neighbor [ip] update-source [loopback]`
 -   NRLI from eBGP can be shared onto all other peers.
 
-# Features
+# Features/ Attributes
+
+Cheat sheet - [https://ipcisco.com/wp-content/uploads/Cheat-Sheets/bgp.pdf](https://ipcisco.com/wp-content/uploads/Cheat-Sheets/bgp.pdf){target="_blank"}
 
 ## Path Selection
 
