--- a/gre+ipsec.qmd
+++ b/gre+ipsec.qmd
@@ -43,26 +43,17 @@ code-block-bg: dark
         -   Main mode preferred as aggressive has security issues
 -   **In Phase 2, following are negotiated:**
     -   Security protocol
-
         -   ESP (Encapsulating Security Payload) or AH (Authentication Header)
         -   AH does not support encryption, rarely used
-
     -   Encapsulation modes
-
         -   Tunnel or transport
         -   Tunnel adds new IP header, used for actually tunneling traffic
-        -   Transport mode used for host-to-host applications or combined with GRE which does the tunneling itself
-
+        -   Transport mode used for host-to-host applications or combined with GRE which does the tunnelling itself
     -   Encryption (used for actual data traffic, not just tunnel)
-
         -   DES, 3DES, AES-128, AES-256, etc
-
     -   Authentication (hashing)
-
         -   MD5, SHA, etc
-
     -   Combination of the above called IPsec **Transform Set**
-
     -   Only performed in QM (quick mode)
 -   UDP 500 (ISAKMP), 4500 (NAT-T) are ports used to establish control plane
     -   4500 is only used with NAT-T^[2](https://brunbattery.github.io/NetworkNotes/IPsec%20&%20GRE%20VPN.html#fn2)^
