--- a/netflow.qmd
+++ b/netflow.qmd
@@ -106,6 +106,10 @@ interface fa0/0
 
 -   BFD is a lightweight *(small fixed packets)* protocol used to determine a link failure between L3 non-directly connected routers.
 
+    -   Sub Second failure
+    -   1 session per address family per interface (regardless of how many protocols run on it).
+    -   Supports OSPF, EIGRP, BGP, IS-IS
+
 -   Connection types in question
 
     -   L2 Switched Network
@@ -117,5 +121,4 @@ interface fa0/0
 -   Requirements
 
     -   **CEP + IP Routing** must be enabled
-
     -   IP Routing protocol supported by BFD must be configured before BFD is configured
