--- a/netflow.qmd
+++ b/netflow.qmd
@@ -23,9 +23,13 @@ code-block-bg: dark
 ### Flexible Netflow
 
 -   Can determine traffic in the same was as Netflow + more. things simultaneously
+
 -   Requires **CEF** (Cisco Express Forwarding) to be enabled
+
 -   **Flexible netflow**
-    -   Used to allow more customization of the traffic parameters to be captured
+
+    Used to allow more customization of the traffic parameters to be captured
+
     -   Consists of records, exporters, samplers and monitors
     -   **Records**
         -   Define what parameters will be captured by netflow
@@ -37,6 +41,16 @@ code-block-bg: dark
     -   **Monitors**
         -   Used to apply netflow records to desired interfaces
         -   References specific flow record and flow exporter
+
+**CONFIG STEPS (REMMI)**
+
+1\) Configure Flow Record
+
+2\) Configur Flow Exporter
+
+3\) Configure Flow Monitor
+
+4\) Apply Flow Monitor to interface.
 
 ------------------------------------------------------------------------
 
