--- a/mpls.qmd
+++ b/mpls.qmd
@@ -44,6 +44,10 @@ code-block-bg: dark
     -   **Entropy Label** - Load Balancing, DPI is done on ingress router (Edge LSR) and entropy label created, this is used by all other MPLS routers. Without each router must perform DPI for LB.
     -   **Implicit NULL Label** - Reserved , Value 3, Used for PHP. When LSR received label with value 3 it knows it has to pop the label before forwarding.
     -   **Explicit NULL Label** - Reserved, Value 0, used to preserve Qos EXP bits and copy them into QoS IP precedence or DiffServ bits after PHP occurs
+        -   NOTE: Normally LDP advertises implicit Null label for directly connected routes. This caused penultimate router to POP label.
+        -   NOTE: In cases where this isn't desirable, `mpls ldp explicit-null` is advertised for directly connected routes.
+            -   Use `prefix-acl` to determine which routes to advertise explicit-null, if not configured all directly connected.
+            -   Peer-acl - advertise to specific peers if configured.
     -   **MPLS LDP Autoconfiguration** - Enables LDP on every interface associated with specific IGP, removes the need to manually configure MPLS - Supports only OSPF + IS-IS
 -   MPLS Label
     -   Locally Significant
@@ -96,8 +100,8 @@ code-block-bg: dark
       rd 100:1
       route-target export 200:1
       route-target import 200:2
-      
-      
+
+
     Router B
     --------
     ip vrf Customer_A
